# PhysicsLENS

./: .gitignore  CLAUDE.md  README.md  launch.sh  run.sh
backend/: dataset_api.py  main.py  requirements-gpu.txt  requirements.txt
backend/archive_files/: collision.py  full_diagnostic.py  optical_flow_compare.py  screening.py  sparse_flow_compare.py
backend/pipelines/: sam_track_compare.py
backend/pipelines/stage1/: camera_motion.py  embedding_biomarkers.py  optical_flow_irregularities.py  temporal_smoothness.py  vlm_suspicion.py
backend/pipelines/stage2/: __init__.py  event_localizer.py  hypothesis_ranker.py  object_tracker.py  (+2 more)
backend/scripts/: check_models.py  createai_vision.py  run_pipeline.py  sam3_smoke.py  test_createai_json.py  test_object_tracker.py  test_vlm_pipeline.py  test_vlm_scoring.py  vlm_eval_results.json  vlm_failure_mode_eval.py  vlm_multimodel_eval.py  vlm_multimodel_results.json  vlm_rapidata_eval.py  vlm_rapidata_results.json
backend/test_reports/: sample_diagnosis.json
backend/tests/: test_fluid_toolkit.py  test_water_benchmark.py  test_water_tests.py
backend/tools/: costs.py  createai.py  embeddings.py  evidence.py  evidence_planner.py  flow.py  fluid.py  locate_anything.py  sam3.py  tracking.py  video.py  vlm.py  vlm_local.py  vlm_router.py
frontend/: index.html
mcp/: .gitignore  README.md  pyproject.toml
mcp/physicslens_mcp/: __init__.py  aggregate.py  client.py  config.py  report.py  runner.py  selection.py  server.py  store.py  taxonomy.py
mcp/scripts/: live_run_test.py  smoke_test.py
test_videos/: README.md
(+28 files in other folders)
