[project]
name = "physicslens-mcp"
version = "0.1.0"
description = "MCP server exposing the PhysicsLENS physics-diagnostic pipelines to agents."
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.0",   # verified on 3.4.4
    "httpx>=0.27",
]

# The store is plain JSON via the stdlib; no DB/ORM dependency. The GPU/model
# stack lives in the backend, NOT here — this package only speaks HTTP to it.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["physicslens_mcp"]
